--- a/.github/workflows/deploy-multi-env.yml
+++ b/.github/workflows/deploy-multi-env.yml
@@ -43,8 +43,8 @@ jobs:
       - name: Trigger Staging Deploy
         run: |
           response=$(curl -X POST "${{ secrets.RENDER_DEPLOY_HOOK_STAGING }}" -w "%{http_code}" -o /dev/null -s)
-          if [ "$response" -eq 200 ] || [ "$response" -eq 201 ]; then
-            echo "Staging deployment triggered successfully"
+          if [[ "$response" =~ ^20[0-9]$ ]]; then
+            echo "Staging deployment triggered successfully (HTTP $response)"
           else
             echo "Staging deployment failed with status $response"
             exit 1
@@ -91,8 +91,8 @@ jobs:
       - name: Trigger Production Deploy
         run: |
           response=$(curl -X POST "${{ secrets.RENDER_DEPLOY_HOOK_PROD }}" -w "%{http_code}" -o /dev/null -s)
-          if [ "$response" -eq 200 ] || [ "$response" -eq 201 ]; then
-            echo "Production deployment triggered successfully"
+          if [[ "$response" =~ ^20[0-9]$ ]]; then
+            echo "Production deployment triggered successfully (HTTP $response)"
           else
             echo "Production deployment failed with status $response"
             exit 1
