--- a/.github/workflows/deploy-multi-env.yml
+++ b/.github/workflows/deploy-multi-env.yml
@@ -86,7 +86,7 @@ jobs:
         run: |
           tag_count=$(git tag | grep -c "^v" || echo "0")
           new_version="v1.0.$((tag_count + 1))"
-          echo "version=$new_version" >> $GITHUB_OUTPUT
+          echo "TAG_NAME=$new_version" >> $GITHUB_ENV
 
       - name: Trigger Production Deploy
         run: |
@@ -119,5 +119,11 @@ jobs:
         run: |
           git config user.name "GitHub Actions"
           git config user.email "actions@github.com"
-          git tag -a ${{ steps.tag.outputs.version }} -m "Release ${{ steps.tag.outputs.version }}"
-          git push origin ${{ steps.tag.outputs.version }}
+
+          if git rev-parse "$TAG_NAME" >/dev/null 2>&1; then
+            echo "Tag $TAG_NAME already exists, skipping tag creation"
+          else
+            git tag -a "$TAG_NAME" -m "Release $TAG_NAME"
+            git push origin "$TAG_NAME"
+            echo "Tag $TAG_NAME created and pushed successfully"
+          fi
