--- a/.github/workflows/deploy-multi-env.yml
+++ b/.github/workflows/deploy-multi-env.yml
@@ -13,7 +13,6 @@ jobs:
   test:
     name: Tests
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -34,17 +33,15 @@ jobs:
     runs-on: ubuntu-latest
     needs: test
     if: github.ref == 'refs/heads/develop' && github.event_name == 'push'
-
     environment:
       name: staging
-      url: https://api-todo-valentin-dauvier-staging.onrender.com
-
+      url: https://api-todo-VOTRE-PRENOM-staging.onrender.com
     steps:
       - name: Trigger Staging Deploy
         run: |
           response=$(curl -X POST "${{ secrets.RENDER_DEPLOY_HOOK_STAGING }}" -w "%{http_code}" -o /dev/null -s)
           if [[ "$response" =~ ^20[0-9]$ ]]; then
-            echo "Staging deployment triggered successfully (HTTP $response)"
+            echo "Staging deployment triggered successfully"
           else
             echo "Staging deployment failed with status $response"
             exit 1
@@ -52,16 +49,16 @@ jobs:
 
       - name: Wait for deployment
         run: |
-          echo "Waiting 60 seconds for deployment to complete..."
           sleep 60
+          echo "Waiting 60 seconds for deployment to complete..."
 
       - name: Health check Staging
         run: |
-          response=$(curl -s -o /dev/null -w "%{http_code}" https://api-todo-valentin-dauvier-staging.onrender.com/health)
+          response=$(curl -s -o /dev/null -w "%{http_code}" https://api-todo-VOTRE-PRENOM-staging.onrender.com/health)
           if [ "$response" -eq 200 ]; then
             echo "Staging is healthy"
           else
-            echo "Staging health check returned $response"
+            echo "Staging health check failed with status $response"
             exit 1
           fi
 
@@ -70,11 +67,9 @@ jobs:
     runs-on: ubuntu-latest
     needs: test
     if: github.ref == 'refs/heads/main' && github.event_name == 'push'
-
     environment:
       name: production
-      url: https://api-todo-valentin-dauvier-prod.onrender.com
-
+      url: https://api-todo-VOTRE-PRENOM-prod.onrender.com
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -87,13 +82,14 @@ jobs:
           git fetch --tags
           tag_count=$(git tag | grep -c "^v" || echo "0")
           new_version="v1.0.$((tag_count + 1))"
-          echo "version=$new_version" >> $GITHUB_OUTPUT
+          echo "new_version=$new_version" >> $GITHUB_OUTPUT
+          echo "New version: $new_version"
 
       - name: Trigger Production Deploy
         run: |
           response=$(curl -X POST "${{ secrets.RENDER_DEPLOY_HOOK_PROD }}" -w "%{http_code}" -o /dev/null -s)
           if [[ "$response" =~ ^20[0-9]$ ]]; then
-            echo "Production deployment triggered successfully (HTTP $response)"
+            echo "Production deployment triggered successfully"
           else
             echo "Production deployment failed with status $response"
             exit 1
@@ -101,12 +97,12 @@ jobs:
 
       - name: Wait for deployment
         run: |
-          echo "Waiting 60 seconds for deployment to complete..."
           sleep 60
+          echo "Waiting 60 seconds for deployment to complete..."
 
       - name: Health check Production
         run: |
-          response=$(curl -s -o /dev/null -w "%{http_code}" https://api-todo-valentin-dauvier-prod.onrender.com/health)
+          response=$(curl -s -o /dev/null -w "%{http_code}" https://api-todo-VOTRE-PRENOM-prod.onrender.com/health)
           if [ "$response" -eq 200 ]; then
             echo "Production is healthy"
           else
@@ -121,7 +117,7 @@ jobs:
           git config user.name "GitHub Actions"
           git config user.email "actions@github.com"
 
-          TAG_NAME="${{ steps.tag.outputs.version }}"
+          TAG_NAME="${{ steps.tag.outputs.new_version }}"
           echo "TAG_NAME = $TAG_NAME"
 
           if [ -z "$TAG_NAME" ]; then
@@ -136,3 +132,9 @@ jobs:
             git push origin "$TAG_NAME"
             echo "Tag $TAG_NAME created and pushed successfully"
           fi
+
+      - name: Deployment Complete
+        run: |
+          echo "Deployment to production complete!"
+          echo "Version: ${{ steps.tag.outputs.new_version }}"
+          echo "URL: https://api-todo-VOTRE-PRENOM-prod.onrender.com"
