--- a/.github/workflows/deploy-multi-env.yml
+++ b/.github/workflows/deploy-multi-env.yml
@@ -79,62 +79,41 @@ jobs:
       - name: Create Version Tag
         id: tag
         run: |
-          git fetch --tags
           tag_count=$(git tag | grep -c "^v" || echo "0")
           new_version="v1.0.$((tag_count + 1))"
-          echo "new_version=$new_version" >> $GITHUB_OUTPUT
+          echo "version=$new_version" >> $GITHUB_OUTPUT
           echo "New version: $new_version"
-
+      
       - name: Trigger Production Deploy
         run: |
-          response=$(curl -X POST "${{ secrets.RENDER_DEPLOY_HOOK_PROD }}" -w "%{http_code}" -o /dev/null -s)
-          if [[ "$response" =~ ^20[0-9]$ ]]; then
-            echo "Production deployment triggered successfully"
+          response=$(curl -X POST ${{ secrets.RENDER_DEPLOY_HOOK_PROD }} -w "%{http_code}" -o /dev/null -s)
+          if [ $response -eq 200 ] || [ $response -eq 201 ] || [ $response -eq 202 ]; then
+            echo "Production deployment triggered successfully (status $response)"
           else
             echo "Production deployment failed with status $response"
             exit 1
           fi
-
+      
       - name: Wait for deployment
         run: |
-          sleep 60
-          echo "Waiting 60 seconds for deployment to complete..."
-
-      - name: Health check Production
+          echo "Waiting 120 seconds for deployment to complete..."
+          sleep 120
+      
+      - name: 🔍 Health check Production
         run: |
-          response=$(curl -s -o /dev/null -w "%{http_code}" https://api-todo-valentin-dauvier-prod.onrender.com/health)
-          if [ "$response" -eq 200 ]; then
+          response=$(curl -s -o /dev/null -w "%{http_code}" https://API-URL-PROD.onrender.com/health)
+          if [ $response -eq 200 ]; then
             echo "Production is healthy"
           else
             echo "Production health check failed with status $response"
             exit 1
           fi
-
+      
       - name: Push Version Tag
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           git config user.name "GitHub Actions"
           git config user.email "actions@github.com"
-
-          TAG_NAME="${{ steps.tag.outputs.new_version }}"
-          echo "TAG_NAME = $TAG_NAME"
-
-          if [ -z "$TAG_NAME" ]; then
-            echo "ERROR: TAG_NAME is empty"
-            exit 1
-          fi
-
-          if git rev-parse "$TAG_NAME" >/dev/null 2>&1; then
-            echo "Tag $TAG_NAME already exists, skipping"
-          else
-            git tag -a "$TAG_NAME" -m "Release $TAG_NAME"
-            git push origin "$TAG_NAME"
-            echo "Tag $TAG_NAME created and pushed successfully"
-          fi
-
-      - name: Deployment Complete
-        run: |
-          echo "Deployment to production complete!"
-          echo "Version: ${{ steps.tag.outputs.new_version }}"
-          echo "URL: https://api-todo-valentin-dauvier-prod.onrender.com"
+          git tag -a ${{ steps.tag.outputs.version }} -m "Release ${{ steps.tag.outputs.version }}"
+          git push origin ${{ steps.tag.outputs.version }}
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
