--- a/.github/workflows/deploy-multi-env.yml
+++ b/.github/workflows/deploy-multi-env.yml
@@ -85,9 +85,13 @@ jobs:
         fetch-depth: 0
     - name: 🏷️ Create & Push Version Tag
       run: |
-        # Compter les tags existants et forcer 0 si vide
-        tag_count=$(git tag | grep -c "^v" || echo 0)
-        tag_count=${tag_count:-0}
+        # Compter les tags existants, et forcer 0 si vide
+        tag_count=$(git tag | grep -c "^v")
+        if [ -z "$tag_count" ]; then
+          tag_count=0
+        fi
+
+        # Créer le nouveau tag
         new_version="v1.0.$((tag_count + 1))"
         echo "📌 New version: $new_version"
 
